Sugati/src/objects/Bank_Account__c.object
<CustomObject>
    <description>A list of VT bank accounts</description>
    <fields>
        <fullName>B_Account_No__c</fullName>
        <label>Account No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Assistant_Manager_Name__c</fullName>
        <label>Assistant Manager Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Assistant_Manager_Phone__c</fullName>
        <label>Assistant Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>B_Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B_Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>B_IBAN__c</fullName>
        <label>IBAN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Manager_Name__c</fullName>
        <description>Bank Manager Name</description>
        <inlineHelpText>Bank Manager Name</inlineHelpText>
        <label>Manager Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>B_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>B_Post_Code__c</fullName>
        <label>Post Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_SWIFT__c</fullName>
        <label>SWIFT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>B_Sort_Code__c</columns>
        <columns>B_Account_No__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>B_IBAN__c</columns>
        <columns>B_SWIFT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>